# cookiecutter-flask-minimal

{{cookiecutter.package_name}}/: pyproject.toml
